<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/account">

        <PreferenceScreen
            android:key="@string/key_pref_profile_photo"
            android:title="@string/profile_photo"
            android:summary="@string/change_your_profile_picture">

            <intent android:action="android.intent.action.PICK"
                android:data="image/*" />

        </PreferenceScreen>

        <EditTextPreference
            android:key="@string/key_pref_email"
            android:title="@string/email"
            android:dialogTitle="@string/email" />

        <EditTextPreference
            android:key="@string/key_pref_name"
            android:title="@string/name"
            android:dialogTitle="@string/name" />

        <EditTextPreference
            android:key="pref_password"
            android:title="@string/password"
            android:dialogTitle="@string/password" />

    </PreferenceCategory>

</PreferenceScreen>